@@ -110,7 +110,7 @@ class Image(plotters.GenericPlotter):
             Image.readColorMaps()
 
         s = self.settings
-        s.add( setting.Dataset('data', '', self.document,
+        s.add( setting.Dataset('data', '',
                                dimensions = 2,
                                descr = 'Dataset to plot' ),
                0 )
