@@ -47,7 +47,7 @@ class Root(widget.Widget):
 
         if type(self) == Root:
             self.readDefaults()
-
+            
     def getSize(self, painter):
         """Get dimensions of widget in painter coordinates."""
         return ( self.settings.get('width').convert(painter),
